// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Activity matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityElementsHidden={true}
    fill="none"
    height={24}
    importantForAccessibility="no-hide-descendants"
    viewBox="0 0 24 24"
    width={24}
  >
    <View
      d="M3 12h3.2l2.2-6.2L12.2 18l2.4-6H21"
      fill="none"
      stroke="#13241C"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
    />
  </View>
</RNCSafeAreaProvider>
`;

exports[`Icon ChevronBack matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityElementsHidden={true}
    fill="none"
    height={24}
    importantForAccessibility="no-hide-descendants"
    viewBox="0 0 24 24"
    width={24}
  >
    <View
      d="M15 6l-6 6 6 6"
      fill="none"
      stroke="#13241C"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
    />
  </View>
</RNCSafeAreaProvider>
`;

exports[`Icon Explore matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityElementsHidden={true}
    fill="none"
    height={24}
    importantForAccessibility="no-hide-descendants"
    viewBox="0 0 24 24"
    width={24}
  >
    <View
      d="M12 3.5a8.5 8.5 0 1 1 0 17 8.5 8.5 0 0 1 0-17z"
      fill="none"
      stroke="#13241C"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
    />
    <View
      d="M14.8 8.6 13 13.2 8.6 14.8 10.4 10.2z"
      fill="#13241C"
    />
  </View>
</RNCSafeAreaProvider>
`;

exports[`Icon Home matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityElementsHidden={true}
    fill="none"
    height={24}
    importantForAccessibility="no-hide-descendants"
    viewBox="0 0 24 24"
    width={24}
  >
    <View
      d="M3.8 10.7 12 3.6l8.2 7.1V20a1.2 1.2 0 0 1-1.2 1.2h-5.2v-6.4H9.2V21.2H5a1.2 1.2 0 0 1-1.2-1.2z"
      fill="#13241C"
    />
  </View>
</RNCSafeAreaProvider>
`;

exports[`Icon Menu matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityElementsHidden={true}
    fill="none"
    height={24}
    importantForAccessibility="no-hide-descendants"
    viewBox="0 0 24 24"
    width={24}
  >
    <View
      d="M4 7h16M4 12h16M4 17h16"
      fill="none"
      stroke="#13241C"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
    />
  </View>
</RNCSafeAreaProvider>
`;

exports[`Icon Profile matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    accessibilityElementsHidden={true}
    fill="none"
    height={24}
    importantForAccessibility="no-hide-descendants"
    viewBox="0 0 24 24"
    width={24}
  >
    <View
      d="M12 4.2a4.4 4.4 0 1 1 0 8.8 4.4 4.4 0 0 1 0-8.8z"
      fill="#13241C"
    />
    <View
      d="M5 20.2v-.6C5 16.4 8.1 14 12 14s7 2.4 7 5.6v.6z"
      fill="#13241C"
    />
  </View>
</RNCSafeAreaProvider>
`;
